# Telefon_agent_Test

./: .gitignore  README.md  main.py  pyproject.toml  task.md  workflow.md
.adk/: session.db
manager/: .env.example  agent.py  reservation_tool.py  schemas.py
manager/.adk/: session.db
manager/llmtext/: llmspydantic.txt
